--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
   --text-primary-color: #212121;
   --text-light-color: #757575;
   --light-background-color: #f5f4fa;
+  --mid-background-color: #ececec;
   --dark-background-color: #2f303a;
   --brand-font: 'Raleway', sans-serif;
   --main-font: 'Roboto', sans-serif;
@@ -15,9 +16,12 @@
 }
 ul {
   list-style: none;
+  padding: 0;
 }
 a {
   text-decoration: none;
+  padding: 0;
+  margin: 0;
 }
 button {
   cursor: pointer;
@@ -28,12 +32,27 @@ body {
   font-size: 14px;
   letter-spacing: 0.03em;
 }
+.section {
+  padding: 94px 0;
+}
+.container {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+}
+.header {
+  display: flex;
+  align-items: center;
+  padding: 24px 0px 25px 0px;
+  border-bottom: 1px solid #ececec;
+}
 .logo {
   font-family: var(--brand-font);
   font-size: 26px;
   font-weight: 700;
   text-transform: capitalize;
   line-height: 1.19;
+  margin-right: 93px;
 }
 .brand-main-color {
   color: var(--brand-primary-color);
@@ -46,6 +65,8 @@ body {
 }
 .nav,
 .contact-info {
+  display: flex;
+  gap: 46px;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
@@ -53,8 +74,16 @@ body {
 .nav a {
   color: inherit;
 }
+.contact-info {
+  gap: 50px;
+  margin: 0 0 0 271px;
+}
 .contact-info a {
   color: var(--text-light-color);
+}
+.hero-section {
+  padding: 200px 0;
+  text-align: center;
 }
 .hero {
   text-transform: uppercase;
@@ -62,12 +91,14 @@ body {
   font-weight: 900;
   line-height: 1.36;
   color: var(--brand-tertiary-color);
+  margin-bottom: 30px;
 }
 .buttons-main {
   font-family: var(--main-font);
   font-size: 16px;
   font-weight: 700;
   line-height: 1.87;
+  padding: 10px 41px 10px 42px;
   border-radius: 4px;
   text-align: center;
   letter-spacing: 0.06em;
@@ -75,10 +106,15 @@ body {
   background-color: var(--brand-primary-color);
   color: var(--brand-tertiary-color);
 }
+.paragraphs {
+  display: flex;
+  gap: 30px;
+}
 .paragraphs h3 {
   text-transform: uppercase;
   font-weight: 700;
   line-height: 1.17;
+  margin-bottom: 10px;
 }
 .paragraphs p {
   color: var(--text-light-color);
@@ -88,6 +124,26 @@ body {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.foto {
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+}
+.background-light {
+  background-color: var(--light-background-color);
+}
+.people {
+  display: flex;
+  gap: 30px;
+}
+.foto-caption {
+  background-color: var(--brand-tertiary-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 .foto-caption h3,
 .foto-caption p {
